# PythonAPIs

./: README.md
ministral3_3b_API/: README.md  app.py  main.py  pyproject.toml
ministral3_3b_API/app/: app.py
requests_EX/: email_get.py  error_handle.py  posts_get.py  posts_post.py  pyproject.toml  token.py
test/: README.md  main.py  pyproject.toml  test.db
test/app/: app.py  db.py  images.py  schemas.py
testnew/: README.md  main.py  posts.py  pyproject.toml  testemail.py  testposts.py
weather_api/: .cache.sqlite  README.md  main.py  pyproject.toml
weather_api/app/: app.py  data.py
weather_hourly/: README.md  main.py  pyproject.toml
weather_hourly/app/: app.py
